# R-Type

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Documentation.html  Doxyfile  README.md  conanfile.txt  conanprofile_linux.txt  conanprofile_win.txt  linux_build.sh  win_build.bat
assets/: assets.json
assets/levels/: level_01.json  menu.json
assets/models/corridor/: corridor.blend  corridor.mtl  license.txt
assets/models/e1116/: enemies.iqm
assets/models/ehr_type/: ehr_type.blend  (+2 more)
assets/shaders/: lighting.fs  outline.fs
client/: CMakeLists.txt  Makefile  cmake_install.cmake
client/include/components/: CAnimatedSprite.hpp  CBox.hpp  CCamera.hpp  CCollider.hpp  CColor.hpp  CHandler.hpp  CHealth.hpp  CParticleEmitter.hpp  CText.hpp
client/include/game/: Game.hpp  Light.hpp
client/include/manager/: ECSManager.hpp
client/include/network/: UdpClient.hpp
client/includes/: Game.hpp  Main.hpp  Scene.hpp  SceneManager.hpp  bullet.hpp  deps.hpp  enemy.hpp  engine.hpp  game-object.hpp  light.hpp  particle2d.hpp  rlights.h  rtype-client.hpp  slider.hpp  structs.hpp  utils.hpp
client/includes/core/: archetype.hpp  components.hpp  ecs_traits.hpp  sparsemap.hpp
client/lib/renderer/: CMakeLists.txt  Makefile  cmake_install.cmake
client/lib/renderer/src/: sfml.cpp
client/network/: UdpClient.cpp  UdpRequest.cpp  id_generator.cpp  include.hpp  network.hpp  session.cpp
client/raylib/: Findraylib.cmake
client/src/: Game.cpp  UdpClient.cpp  UdpRequest.cpp  box.cpp  bullet.cpp  button.cpp  engine.cpp  game-object.cpp  game.cpp  id_generator.cpp  load.cpp  main.cpp  particle2d.cpp  slider.cpp  utils.cpp
client/src/Network/: UdpClient.cpp
client/src/Scenes/: Scenes.cpp  ScenesManager.cpp
client/src/components/: CAnimatedSprite.cpp  CBox.cpp  CCamera.cpp  CCollider.cpp  CColor.cpp  CHandler.cpp  CHealth.cpp  CParticleEmitter.cpp  CText.cpp
client/src/ecs/core/: archetype.hpp  components.hpp  ecs_traits.hpp  entities.hpp  entity_manager.hpp  sparsemap.hpp
client/src/game/: Bullet.cpp  Entity.cpp  Game.cpp  Light.cpp  Loading.cpp  Network.cpp  Player.cpp  Sound.cpp  Text.cpp
client/src/manager/: ECSManager.cpp
client/src/network/: UdpClient.cpp
documentation/: doc.h  serverpage.md
documentation/html/: __mingw__dxhelper_8h_source.html  abi__macros_8hpp_source.html  adl__serializer_8hpp_source.html  android__native__app__glue_8h_source.html  annotated.html  annotated_dup.js  archetype_8hpp_source.html  audio__data_8h_source.html  begin_8hpp_source.html  binary__reader_8hpp_source.html  binary__writer_8hpp_source.html  bullet_8hpp_source.html  button_8hpp_source.html  byte__container__with__subtype_8hpp_source.html  cgltf_8h_source.html  classBullet-members.html  classBullet.html  classBullet.js  classButton-members.html  classButton.html  classButton.js  classClient-members.html  classClient.html  classEnemy-members.html  classEnemy.html  classEngine-members.html  classEngine.html  classEngine.js  classGameObject-members.html  classGameObject.html  classGameObject.js  classLight-members.html  classLight.html  classParticle2D-members.html  classParticle2D.html  classParticle2D.js  classPlayer-members.html  classPlayer.html  classPlayer.js  classSession-members.html  (+2079 more)
documentation/latex/: __mingw__dxhelper_8h_source.tex  abi__macros_8hpp_source.tex  adl__serializer_8hpp_source.tex  android__native__app__glue_8h_source.tex  annotated.tex  archetype_8hpp_source.tex  audio__data_8h_source.tex  begin_8hpp_source.tex  binary__reader_8hpp_source.tex  binary__writer_8hpp_source.tex  bullet_8hpp_source.tex  button_8hpp_source.tex  byte__container__with__subtype_8hpp_source.tex  cgltf_8h_source.tex  classBullet.tex  classButton.tex  classClient.tex  classEnemy.tex  classEngine.tex  classGameObject.tex  classLight.tex  classParticle2D.tex  classPlayer.tex  classSession.tex  classSlider.tex  classUdpClient.tex  classUdpRequest.tex  classUdpServer.tex  classbasic__json.tex  classbyte__container__with__subtype.eps  classbyte__container__with__subtype.tex  classdetail_1_1binary__reader.tex  classdetail_1_1binary__writer.tex  classdetail_1_1exception.eps  classdetail_1_1exception.tex  classdetail_1_1file__input__adapter.tex  classdetail_1_1input__stream__adapter.tex  classdetail_1_1invalid__iterator.eps  classdetail_1_1invalid__iterator.tex  classdetail_1_1iter__impl.tex  (+1087 more)
engine/: CMakeLists.txt
engine/include/engine/: CPPIncludes.hpp
engine/include/engine/components/: CAnimation.hpp  CModel.hpp  CMovement.hpp  CMusic.hpp  CObject.hpp  CPosition.hpp  CRotation.hpp  CScale.hpp  CShader.hpp  CSound.hpp  CSprite.hpp  CTexture.hpp  CTransform.hpp  CVelocity.hpp  ComponentBase.hpp  Sprite.hpp
engine/include/engine/game/: GameBase.hpp
engine/include/engine/graphics/: Raylib.hpp
engine/include/engine/manager/: Archetype.hpp  ECSManagerBase.hpp  Sparsemap.hpp
engine/include/engine/messages/: MessageManager.hpp  Messages.hpp
engine/include/engine/utils/: Defines.hpp  HashId.hpp  Json.hpp  Regex.hpp
engine/src/: utils.cpp
engine/src/components/: CAnimation.cpp  CModel.cpp  CMovement.cpp  CMusic.cpp  CObject.cpp  CPosition.cpp  CRotation.cpp  CScale.cpp  CShader.cpp  CSound.cpp  CSprite.cpp  CTexture.cpp  CTransform.cpp  CVelocity.cpp  Component.cpp  ComponentBase.cpp
engine/src/game/: GameBase.cpp
engine/src/manager/: ECSManagerBase.cpp
lib/renderer/: CMakeLists.txt
old/: box.cpp  bullet.hpp  button.cpp  button.hpp  deps.hpp  engine.cpp  engine.hpp  game-object.hpp  game.cpp  light.hpp  main.cpp  particle2d.cpp  particle2d.hpp  slider.hpp  structs.hpp
old/core/: Sparsemap.hpp  archetype.hpp  components.hpp  ecs_traits.hpp
server/: CMakeLists.txt  Protocol.md  tcpclient.cpp
server/includes/: EngineUdpServer.hpp  MainServer.hpp  TcpServer.hpp  bullet.hpp  enemy.hpp  network.hpp  player.hpp  room.hpp  serverEngine.hpp  uiElements.hpp  utils.hpp
server/src/: UpdServer.cpp  main.cpp  player.cpp  utils.cpp
server/src/test/: minimal_client  minimal_client.cpp  mnimal_server.cpp
src/: main.cpp
utils/: id_generator.cpp  split.cpp
(+119 files in other folders)
